@@ -1,3 +1,8 @@
+Sat Nov  3 13:46:49 2012  Kouhei Sutou  <kou@cozmixng.org>
+
+	* test/rexml/test_document.rb: Fix tests that expect encoding name
+	  isn't normalized.
+
 Sat Nov  3 13:26:00 2012  Zachary Scott  <zachary@zacharyscott.net>
 
 	* dir.c (Dir#glob):
